force-app/main/default/objects/Patch_Application__c/Patch_Application__c.object-meta.xml
<CustomObject>
    <label>Deployment History</label>
    <nameField>
        <displayFormat>DP-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>