force-app/main/default/objects/Patch_Application__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Deployment History</relationshipLabel>
    <relationshipName>Deployment_History</relationshipName>
    <type>Lookup</type>
</CustomField>