force-app/main/default/objects/Patch_Application__c/fields/Deployment_Log__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Log__c</fullName>
    <label>Deployment Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>