force-app/main/default/objects/Patch_Application__c/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Completed?</label>
    <type>Checkbox</type>
</CustomField>