force-app/main/default/objects/Patch_Application__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Org</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipName>Patch_Application</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>