force-app/main/default/objects/Patch_Application__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF( AND(Job_Completed__c ,  Succeed__c) , IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Passed.png&apos;, &apos;No issues&apos;, 30, 127) , IF( NOT(Job_Completed__c), &apos;&apos;, IMAGE(&apos;/resource/&apos;+$Setup.Credentials__c.Namespace__c+&apos;IconsUtility/Failed.png&apos;, &apos;Issues found&apos;, 30, 127)))</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>