force-app/main/default/objects/Patch_Application__c/fields/Succeed__c.field-meta.xml
<CustomField>
    <fullName>Succeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Succeed?</label>
    <type>Checkbox</type>
</CustomField>