force-app/main/default/objects/Patch_Application__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patch_Application</relationshipName>
    <type>Lookup</type>
</CustomField>